// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewPatchSet.js Should display all Patch Template configuration 1`] = `
<ReviewPatchSet>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent
            style={
              Object {
                "marginTop": "-15px",
              }
            }
          >
            <div
              className="pf-c-content"
              style={
                Object {
                  "marginTop": "-15px",
                }
              }
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-1"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Review the information below and click 
                  <b
                    key=".1"
                  >
                    Submit
                  </b>
                   to complete patch template creation
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Name
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-name
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Description
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-description
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Date
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      2022-06-14
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Selected systems
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      2
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
    </div>
  </Stack>
</ReviewPatchSet>
`;

exports[`ReviewPatchSet.js Should display available configuration fields only 1`] = `
<ReviewPatchSet>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent
            style={
              Object {
                "marginTop": "-15px",
              }
            }
          >
            <div
              className="pf-c-content"
              style={
                Object {
                  "marginTop": "-15px",
                }
              }
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-2"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Review the information below and click 
                  <b
                    key=".1"
                  >
                    Submit
                  </b>
                   to complete patch template creation
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Name
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-name
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                  >
                    <dt
                      className=""
                    >
                      Selected systems
                      :
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      2
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
    </div>
  </Stack>
</ReviewPatchSet>
`;
